--- a/pqz/ini/prod/2 elementare/inglese-1.ini
+++ b/pqz/ini/prod/2 elementare/inglese-1.ini
@@ -1,12 +1,15 @@
 
 [options]
 ; Quiz title
-title="Matematica 2 elementare - Livello 1"
+title="Inglese 2 elementare - Livello 1"
 
 ;Csv file input (path is relative to data directory)
-csv_input=2e-matematica-.csv
+csv_input=inglese-.csv
 
+min_diffucult_level=5
+max_diffucult_level=5
 
+default_response_type=text
 
 congratulation_file=congratulation-frozen-2e-aritmetica.csv
 
