--- a/pqz/ini/prod/2 elementare/tabelline.ini
+++ b/pqz/ini/prod/2 elementare/tabelline.ini
@@ -7,6 +7,7 @@ title="Tabelline (0-10)"
 csv_input=tabelline.csv
 
 default_response_type=text
+max_question_total=10
 
 congratulation_file=trilli-1.csv
 
