piccole modifiche arc27

--- a/pqz/ini/default.ini
+++ b/pqz/ini/default.ini
@@ -35,9 +35,16 @@ num_options=5
 ; filter with the following tags (tags separated by | ) 
 tags= 
 
+; max numer of seconds to complete test (0 means unlimited)
+max_time_to_complete=0 
+
 [view]
 ; number of question to show in each page
 num_question_per_page=1
 
 ; if all question are correct show an image from the following list of url
 congratulation_file=congratulation-girl6.csv
+
+;show time during quiz_icon
+show_time=true
+
